--- a/dockerfiles/mlflow/Dockerfile
+++ b/dockerfiles/mlflow/Dockerfile
@@ -1,5 +1,6 @@
-FROM python:3.7-slim-buster
+FROM python:3.8-slim-buster
 RUN apt-get update
 RUN apt-get install -y postgresql postgresql-contrib postgresql-server-dev-all python-psycopg2
 COPY requirements.txt requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install -r requirements.txt
