--- a/dockerfiles/airflow/Dockerfile
+++ b/dockerfiles/airflow/Dockerfile
@@ -1,6 +1,7 @@
-FROM apache/airflow:2.5.0-python3.7
+FROM apache/airflow:latest-python3.8
 USER root
 RUN apt-get update
 USER airflow
 COPY requirements.txt requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
