--- a/dockerfiles/jupyter/Dockerfile
+++ b/dockerfiles/jupyter/Dockerfile
@@ -2,4 +2,5 @@ FROM jupyter/scipy-notebook:lab-3.3.2
 USER root
 RUN apt-get update
 COPY requirements.txt requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install -r requirements.txt
