--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -19,4 +19,4 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt  # Install dependencies
           dvc pull                         # Pull data & run-cache from S3
-          dvc repro                        # Reproduce pipeline
+          dvc repro --force                # Reproduce pipeline
