--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -20,3 +20,10 @@ jobs:
           pip install -r requirements.txt  # Install dependencies
           dvc pull                         # Pull data & run-cache from S3
           dvc repro --force                # Reproduce pipeline
+
+          git fetch --prune --unshallow
+          dvc metrics diff --show-md master >> report.md
+          vl2png ./artifacts/metrics.json -s 1.3 > metrics.png
+          echo '![](./metrics.png)' >> report.md
+          echo '![](./artifacts/confusion_matrix.png)' >> report.md
+          cml comment create --pr --publish report.md
