--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -13,6 +13,7 @@ jobs:
       - uses: iterative/setup-dvc@v1
       - name: Train model
         env:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
