--- a/dvc.yaml
+++ b/dvc.yaml
@@ -2,17 +2,11 @@ stages:
   run_pipeline:
     cmd: python pipeline.py
     deps:
-    - data
+    - data/input_data
+    - data/output_data
     - pipeline.py
     metrics:
-    - artifacts/metrics.json:
+    - data/artifacts/metrics.json:
         cache: false
-metrics:
-- dvclive/metrics.json
-plots:
-- dvclive/plots/metrics:
-    x: step
-artifacts:
-  model:
-    path: artifacts/model.pkl
-    type: model
+    plots:
+    - data/artifacts/confusion_matrix.png
