--- a/dvc.yaml
+++ b/dvc.yaml
@@ -2,11 +2,17 @@ stages:
   run_pipeline:
     cmd: python pipeline.py
     deps:
-    - data/input_data
-    - data/output_data
+    - data
     - pipeline.py
     metrics:
-    - data/artifacts/metrics.json:
+    - artifacts/metrics.json:
         cache: false
-    plots:
-    - data/artifacts/confusion_matrix.png
+metrics:
+- dvclive/metrics.json
+plots:
+- dvclive/plots/metrics:
+    x: step
+artifacts:
+  model:
+    path: artifacts/model.pkl
+    type: model
