--- a/assets/ml_cloud4mation/mlpipeline.yaml
+++ b/assets/ml_cloud4mation/mlpipeline.yaml
@@ -2,7 +2,7 @@ Parameters:
   BranchName: 
     Description: CodeCommit branch name 
     Type: String 
-    Default: master 
+    Default: main 
   RepositoryName: 
     Description: CodeCommit repository name 
     Type: String 
