--- a/assets/ml_cloud4mation/mlpipeline_1.yaml
+++ b/assets/ml_cloud4mation/mlpipeline_1.yaml
@@ -6,7 +6,7 @@ Parameters:
 
     Type: String 
 
-    Default: master 
+    Default: main 
 
   RepositoryName: 
 
@@ -316,7 +316,7 @@ Resources:
 
           referenceName: 
 
-            - master 
+            - main 
 
       Targets: 
 
